syntax = "proto3";

package tukki.storage.segments.v1;

option go_package = "github.com/jukeks/tukki/db/segments";

import "tukki/storage/segments/v1/segments.proto";


message AddSegment {
    Segment segment = 1;
}

message MergeSegments {
    Segment new_segment = 1;
    repeated Segment segments_to_merge = 2;
}

message SegmentOperation {
    uint64 id = 1;
    oneof operation {
        AddSegment add = 2;
        MergeSegments merge = 3;
    }
}

message SegmentOperationJournalEntry {
    oneof entry {
        SegmentOperation started = 1;
        uint64 completed = 2;
    }
}